// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Html compilation test > script`] = `
{
  "css": "",
  "js": "
async function() {
  const __html__ = {};
__html__.render = function() {
    setTimeout(()=>{
        try {
            console.log('hello');
        } catch (error) {
            console.error(error);
        }
    }, 100);
    return ``;
};
__html__.__id__ = "634c1b1a";
return {
    default: __html__
};

}
`;

exports[`Html compilation test > script + html`] = `
{
  "css": "",
  "js": "
async function() {
  const __html__ = {};
__html__.render = function() {
    setTimeout(()=>{
        try {
            const msg = 'Hello!';
            function log() {
                console.log(msg);
            }
        } catch (error) {
            console.error(error);
        }
    }, 100);
    return `
<button @click="log">button</button>`;
};
__html__.__id__ = "fcaf92d6";
return {
    default: __html__
};

}
`;

